fixed alignment issue

--- a/client/src/components/Card/card.css
+++ b/client/src/components/Card/card.css
@@ -1,7 +1,7 @@
 .card {
     font-size: 10px;
-    height: 150px;
-    width: 150px;
+    height: 225px;
+    width: 225px;
     margin: 0 auto 30px;
     border: none !important;
     background: none;
